--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 server.port=8080
 server.error.whitelabel.enabled=false
 
-spring.datasource.url = jdbc:mysql://localhost:3306/springjpa?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username = root
-spring.datasource.password =
+#spring.datasource.url = jdbc:mysql://localhost:3306/springjpa?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.username = root
+#spring.datasource.password =
+
+spring.datasource.url= jdbc:oracle:thin:@127.0.0.1:1521:orcl
+spring.datasource.username=system
+spring.datasource.password=#sp52qjiZ#
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 #spring.data.rest.page-param-name=page
 #spring.data.rest.limit-param-name=limit
@@ -12,4 +17,4 @@ spring.datasource.password =
 
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = create-drop
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
