--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.data.rest.max-page-size = 10
 
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle10gDialect
