--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.error.whitelabel.enabled=false
 
 spring.datasource.url= jdbc:oracle:thin:@127.0.0.1:1521:orcl
 spring.datasource.username=system
-spring.datasource.password=Colombia45
+spring.datasource.password=#sp52qjiZ#
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 
 #spring.data.rest.page-param-name=page
